<?xml version="1.0" encoding="utf-8"?>

<!--
	This file is part of Todo.txt, an Android app for managing your todo.txt 
	file (http://todotxt.com).

	Copyright (c) 2009-2013 Todo.txt contributors (http://todotxt.com)

	LICENSE:

	Todo.txt is free software: you can redistribute it and/or modify it 
	under the terms of the GNU General Public
	License as published by the Free Software Foundation, either version 2 of 
	the License, or (at your option) any
	later version.

	Todo.txt is distributed in the hope that it will be useful, but WITHOUT 
	ANY WARRANTY; without even the implied
	warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
	GNU General Public License for more
	details.

	You should have received a copy of the GNU General Public License along with 
	Todo.txt. If not, see
	<http://www.gnu.org/licenses/>.

	@author Todo.txt contributors <todotxt@yahoogroups.com>
	@license http://www.gnu.org/licenses/gpl.html
	@copyright 2009-2013 Todo.txt contributors (http://todotxt.com)
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="todotxt_settings"
        android:title="@string/todotxt_settings_header" >
        <CheckBoxPreference
            android:key="@string/auto_archive_pref_key"
            android:summary="@string/auto_archive_pref_summary"
            android:title="@string/auto_archive_pref_title" />
        <CheckBoxPreference
            android:key="@string/prepend_date_pref_key"
            android:summary="@string/prepend_date_pref_summary"
            android:title="@string/prepend_date_pref_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="dropbox_settings"
        android:title="@string/dropbox_settings_header" >
        <com.todotxt.todotxttouch.TodoLocationPreference
            android:defaultValue="@string/todo_path_default"
            android:key="@string/todo_path_key"
            android:summary="@string/todo_path_summary"
            android:title="@string/todo_path_title" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/periodic_sync_lengths"
            android:entryValues="@array/periodic_sync_values"
            android:key="@string/periodic_sync_pref_key"
            android:title="@string/periodic_sync_pref_title" />

        <Preference
            android:key="logout_dropbox"
            android:summary="@string/dropbox_logout_pref_summary"
            android:title="@string/dropbox_logout_pref_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="about_settings_header"
        android:title="@string/about_settings_header" >
        <Preference
            android:key="app_version"
            android:title="@string/app_label" />
    </PreferenceCategory>

</PreferenceScreen>