<?xml version="1.0" encoding="utf-8"?>

<!--
This file is part of Todo.txt, an Android app for managing your todo.txt file (http://todotxt.com).

Copyright (c) 2009-2013 Todo.txt contributors (http://todotxt.com)

LICENSE:

Todo.txt is free software: you can redistribute it and/or modify it under the terms of the GNU General Public
License as published by the Free Software Foundation, either version 2 of the License, or (at your option) any
later version.

Todo.txt is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
details.

You should have received a copy of the GNU General Public License along with Todo.txt.  If not, see
<http://www.gnu.org/licenses/>.

@author Todo.txt contributors <todotxt@yahoogroups.com>
@license http://www.gnu.org/licenses/gpl.html
@copyright 2009-2013 Todo.txt contributors (http://todotxt.com)
-->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/done"
        android:icon="@drawable/action_complete_tintable"
        android:title="@string/done"
        app:showAsAction="always" />
    <item
        android:id="@+id/update"
        android:icon="@drawable/action_edit_tintable"
        android:title="@string/update"
        app:showAsAction="always" />
    <item
        android:id="@+id/uncomplete"
        android:icon="@drawable/ic_action_uncomplete"
        android:title="@string/unComplete"
        app:showAsAction="never" />
    <item
        android:id="@+id/priority"
        android:icon="@drawable/action_prioritize_tintable"
        android:title="@string/priority"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/action_delete_tintable"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/calendar"
        android:enabled="@bool/api_14_or_above"
        android:title="@string/add_to_calendar"
        app:showAsAction="never" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/url"
        android:visible="false" />
    <item
        android:id="@+id/mail"
        android:visible="false" />
    <item
        android:id="@+id/phone_number"
        android:visible="false" />

</menu>